chore(#5001): use non-deprecated Thread.threadId() for connection_id